src/templates/post.css
.post-meta {
  display: flex;
  flex-direction: column;
  justify-content: center;

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content {
  display: flex;
  flex-direction: column;
}

.blog-content * {
  margin: 0;
  padding: 0;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

.blog-content h1 {
  margin: 0;
  font-size: 40px;
  font-family: Lato;
  padding: 0;
  /* margin-top: 1.6em; */
  color: rgb(43, 55, 62);

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content h1 .anchor {
  margin-left: -26px;
  margin-top: -4px;
  border: 0;
}

.blog-content h3 {
  margin: 0;
  font-size: 26px;
  font-family: Lato;
  padding: 0;
  margin-top: 1.6em;
  margin-bottom: 0.618em;
  color: rgb(43, 55, 62);

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content h2 {
  margin: 0;
  font-size: 30px;
  font-family: Lato;
  padding: 0;
  margin-top: 1.3em;
  margin-bottom: 0.618em;
  color: rgb(43, 55, 62);

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content h2 .anchor {
  text-decoration: none;
  padding-right: 10px;
  border: 0;
  margin-left: -26px;
}

.blog-content h3 a {
  color: rgba(64, 150, 196, 0.7);
  text-decoration: none;
  border-bottom: 2px solid rgba(64, 150, 196, 0.1);
}

.blog-content h3 a:hover {
  color: rgba(64, 150, 196, 0.9);
  border-bottom: 2px solid rgba(64, 150, 196, 0.9);
}

.blog-content h3 .anchor {
  text-decoration: none;
  padding-right: 10px;
  border: 0;
  margin-left: -26px;
}

.blog-content h3 .anchor:hover {
  border: 0;
}

.blog-content p {
  margin: 0;
  font-family: Lato;
  width: 100%;
  font-size: 18px;
  /* line-height: 28px; */
  color: rgba(43, 55, 62, 0.8);
  margin-top: 1.3em;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  margin-top: 1.3em;
  line-height: 32px;

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content p a {
  /* color: rgba(64, 150, 196, 0.5); */
  font-weight: 400;
  font-family: Lato, sans-serif;
  line-height: 2em;
  text-decoration: none;
  color: rgba(64, 150, 196, 0.8);
  border-bottom: 2px solid rgba(64, 150, 196, 0.1);
  text-decoration: none;
  color: rgba(64, 150, 196, 0.8);
  border-bottom: 2px solid rgba(64, 150, 196, 0.1);
  line-height: 32px;
  margin-left: 3px;
  margin-right: 3px;
}

.blog-content p a:hover {
  color: rgba(64, 150, 196, 0.9);
  border-bottom: 2px solid rgba(64, 150, 196, 0.9);
}

.blog-content ul {
  margin-left: 24px;
  margin-top: 1.3em;

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content ul li + li {
  margin-top: 0.61em;
}

.blog-content ul li {
  margin: 0;
  font-family: Lato;
  width: 100%;
  font-size: 18px;
  line-height: 28px;
  color: rgba(43, 55, 62, 0.8);
}

.blog-content ol {
  margin-left: 24px;
  margin-top: 1.3em;

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content ol li + li {
  margin-top: 0.61em;
}

.blog-content ol li {
  margin: 0;
  font-family: Lato;
  width: 100%;
  font-size: 18px;
  line-height: 28px;
  color: rgba(43, 55, 62, 0.8);
}

.blog-content p img {
  width: 100%;
}

.blog-content p code {
  color: #9cdcfe;
  background: #364354;
  border-radius: 2px;
  padding: 3px 5px;
  font-size: 16px;
}

.blog-content p img + em {
  width: 100%;
  display: flex;
  justify-content: center;
  font-size: 14px;
  text-align: center;
}

.blog-content blockquote {
  border-left: 3px solid rgba(43, 55, 62, 0.39);
  padding-left: 13px;
  margin-left: 8px;
  margin-top: 8px;
  margin-bottom: 8px;

  max-width: 680px;
  min-width: 680px;
  align-self: center;
}

.blog-content blockquote p {
  margin: 0;
  padding: 0;
}

.blog-content table {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
  border: 0;
  margin-top: 1.5em;
  display: table;
  margin-right: auto;
  margin-left: auto;
}

@media (max-width: 768px) {
  .blog-content table {
    display: block;
    overflow-x: auto;
    white-space: nowrap;
    width: 100%;
  }
}

.blog-content thead {
  background-color: #fafcfc;
}

.blog-content thead th {
  font-family: Lato;
  color: #70818a;
  text-align: left;
  padding: 12px 20px;
}

.blog-content tbody td {
  font-family: Lato;
  color: #454b4e;
  text-align: left;
  padding: 12px 20px;
  border-bottom: 1px solid rgba(218, 228, 233, 0.39);
}

.blog-content li a {
  color: rgba(64, 150, 196, 0.7);
  text-decoration: none;
  border-bottom: 2px solid rgba(64, 150, 196, 0.1);
}

.blog-content li a:hover {
  color: rgba(64, 150, 196, 0.9);
  border-bottom: 2px solid rgba(64, 150, 196, 0.9);
}

.blog-content .gatsby-resp-image-background-image {
  background-image: none !important;
}

.line-numbers {
  padding: 0 !important;
  padding-left: 20px !important;
}

.line-numbers-rows {
  border: 0 !important;
  padding-top: 26px;
  padding-left: 12px;
}

.gatsby-highlight pre {
  padding: 25px 50px !important;
}

.gatsby-highlight-code-line {
  width: 100%;
  display: block;
  margin-right: -1em;
  margin-left: -0.5em;
  padding-right: 1em;
  padding-left: 0.25em;
  border-left: 0.25em solid #007acc;
  background: linear-gradient(
    90deg,
    rgba(0, 122, 204, 0.39) 0%,
    rgba(0, 122, 204, 0.39) 61%,
    rgba(30, 30, 30, 1) 100%
  ) !important;
}

.gatsby-highlight-code-line::after {
  /* content: "\A";
  white-space: pre; */
}

.gatsby-highlight-code-line .gatsby-highlight-code-line {
  background: none !important;
}

